PSD: fix using implementation-defined signedness when decompressing RLE

BUG: 464015